FP opportunity list issue fixed