@@ -189,7 +189,7 @@ public class BusinessUnitReportServiceImpl implements BusinessUnitReportService 
 		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMMM-yyyy", Locale.ENGLISH);
 		return Stream.iterate(startDate.withDayOfMonth(1), date -> date.plusMonths(1))
 				.limit(ChronoUnit.MONTHS.between(startDate, endDate.plusMonths(1))).map(date -> date.format(formatter))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	private FinancialYearRevenue calculatingBasedOnBusinessUnit(List<RevenueResourceEntry> revenueResourceEntries,
